# PhaseIntensityMicroscope

./: README.md
cuda/: CMakeLists.txt  README.md  cws.cpp  setup.py
cuda/src/: IO_helper_functions.h  common.h  computeDCTweightsKernel.cuh  cws_A_phi.cu  cws_A_phi.h  medianfilteringKernel.cuh  prepare_cufft_warmup.cu  prepare_cufft_warmup.h  prepare_precomputations.cu  prepare_precomputations.h  prox_gKernel.cuh  x_updateKernel.cuh
data/HeLa/: cap.tif  ref.tif
data/MCF-7/: cap.tif  ref.tif
data/MLA-150-7AR-M/: cap.tif  ref.tif
data/blood/: cap_1.tif  cap_2.tif  ref_1.tif  ref_2.tif
data/cheek/: cap.tif  ref.tif
matlab/: cpu_gpu_comparison.m  cws.m  cws_gpu_wrapper.m  main_wavefront_solver.m  speckle_pattern_baseline.m
matlab/utils/: LoadMetroProData.m  poisson_solver.m  tilt_removal.m
scripts/: Figure2.m  Figure3.m  Figure4.m
